--- a/Urusai-ren.csproj
+++ b/Urusai-ren.csproj
@@ -43,7 +43,7 @@
       <HintPath>$(TarkovBepInExCoreDir)0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Aki.Reflection">
-      <HintPath>$(TarkovManagedDir)Aki.Common.dll</HintPath>
+        <HintPath>$(TarkovManagedDir)Aki.Common.dll</HintPath>
     </Reference>
     <Reference Include="Aki.Common">
       <HintPath>$(TarkovManagedDir)Aki.Reflection.dll</HintPath>
@@ -79,6 +79,8 @@
     <Compile Include="Patches.cs" />
     <Compile Include="Components\SirenController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\ConfigurationManagerAttributes.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 
