--- a/Urusai-ren.csproj
+++ b/Urusai-ren.csproj
@@ -32,11 +32,11 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <PropertyGroup>
-        <TarkovDir Condition=" '$(TarkovDir)' == '' ">D:\Games\SPT - 3.9.0 - Dev\</TarkovDir>
-        <TarkovManagedDir>D:\Games\SPT - 3.9.0 - Dev\EscapeFromTarkov_Data\Managed\</TarkovManagedDir>
-        <TarkovBepInExCoreDir>D:\Games\SPT - 3.9.0 - Dev\BepInEx\core\</TarkovBepInExCoreDir>
-        <TarkovBepInExSptPluginDir>D:\Games\SPT - 3.9.0 - Dev\BepInEx\plugins\spt\</TarkovBepInExSptPluginDir>
-        <TargetSptVersion>3.9.0</TargetSptVersion>
+        <TarkovDir Condition=" '$(TarkovDir)' == '' ">C:\Games\SPT - 3.10\</TarkovDir>
+        <TarkovManagedDir>$(TarkovDir)EscapeFromTarkov_Data\Managed\</TarkovManagedDir>
+        <TarkovBepInExCoreDir>$(TarkovDir)BepInEx\core\</TarkovBepInExCoreDir>
+        <TarkovBepInExSptPluginDir>$(TarkovDir)BepInEx\plugins\spt\</TarkovBepInExSptPluginDir>
+        <TargetSptVersion>3.10</TargetSptVersion>
         <SourceRevisionId>1.0.0</SourceRevisionId>
     </PropertyGroup>
     <ItemGroup>
@@ -93,11 +93,11 @@
             <Resources Include="$(ProjectDir)Resources\*"/>
         </ItemGroup>
 
-        <Copy SourceFiles="@(OutputDLL);@(Resources)" DestinationFolder="$(TarkovDir)BepInEx\plugins\$(TargetName)"/>
-        <Copy SourceFiles="@(OutputPDB)" DestinationFolder="$(TarkovDir)BepInEx\plugins\$(TargetName)"/>
+        <Copy SourceFiles="@(OutputDLL);@(Resources)" DestinationFolder="$(TarkovDir)BepInEx\plugins\"/>
+        <Copy SourceFiles="@(OutputPDB)" DestinationFolder="$(TarkovDir)BepInEx\plugins\"/>
 
         <RemoveDir Directories="$(ProjectDir)release"/>
-        <Copy SourceFiles="@(OutputDLL);@(Resources)" DestinationFolder="$(ProjectDir)release\$(TargetName)\BepInEx\plugins\$(TargetName)"/>
+        <Copy SourceFiles="@(OutputDLL);@(Resources)" DestinationFolder="$(ProjectDir)release\$(TargetName)\BepInEx\plugins\"/>
         <ZipDirectory SourceDirectory="$(ProjectDir)release\$(TargetName)\" DestinationFile="$(ProjectDir)release\$(TargetName)-$(TargetSptVersion)-$(SourceRevisionId).zip"/>
     </Target>
 
